--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "dev:frontend": "vite --open",
     "dev:server": "node server/index.js",
     "build": "vite build",
-    "lint": "tsc -p . -noEmit --pretty false && vite build"
+    "lint": "tsc -p . -noEmit --pretty false && vite build",
+    "migrate": "node migrate-data.js"
   },
   "dependencies": {
-    "clsx": "^2.1.1",
-    "express": "^4.21.2",
-    "cors": "^2.8.5",
+    "@supabase/supabase-js": "^2.58.0",
     "better-sqlite3": "^11.7.0",
+    "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.3",
