--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # Logs
 logs
 *.log
-npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
@@ -11,6 +10,10 @@ node_modules
 dist
 dist-ssr
 *.local
+
+# Environment files and local databases
+.env
+server/attendance.db
 
 # Editor directories and files
 .vscode/*
