Cleanup: migrate to Vercel Postgres, remove legacy Supabase/SQLite, update docs and env example

--- a/env.example
+++ b/env.example
@@ -1,8 +1,16 @@
-# Supabase Configuration
-SUPABASE_KEY=your_supabase_anon_key
+# Environment Configuration
+ 
+# Vercel Postgres (set automatically on Vercel when the integration is added)
+# For local dev, you can create a Postgres db and set this to a connection string.
+# Example: postgres://user:password@localhost:5432/attendance
+POSTGRES_URL=
+
+# Frontend will call the API at this base URL. In dev, set to http://127.0.0.1:5174
+# On Vercel, you can leave this empty so relative URLs are used.
+VITE_API_URL=
 
 # Admin PIN for destructive operations (optional - leave empty for dev mode)
-ADMIN_PIN=your_admin_pin
+ADMIN_PIN=
 
 # Server Port (optional - defaults to 5174)
 PORT=5174
