--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,32 @@
+# Dependencies
+node_modules/
+
+# Builds
+dist/
+.vite/
+
+# Env
+
+.env.local
+
 # Logs
-logs
-*.log
+npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Environment files and local databases
-.env
-server/attendance.db
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# OS
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
 
-# Ignored for the template, you probably want to remove it:
-package-lock.json
+# IDE
+.idea/
+.vscode/
+
+# SQLite (legacy)
+server/attendance.db
+server/attendance.db-journal
+
+# Misc
+*.local
+.env
