--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@vercel/postgres": "^0.9.0",
+    "better-sqlite3": "^12.4.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
